--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/RacketPlannerLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Padel Point Rabat</title>
+    <title>RacketPlanner</title>
   </head>
   <body>
     <div id="root"></div>
